# ARM64EC.Porting

./: .gitignore  CMakeLists.txt  CMakePresets.json
Filters/: CMakeLists.txt  Filters.cpp
Main-app/: main.py
Vectors/: CMakeLists.txt  Vectors.cpp  Vectors.h
